<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">大合照好幫手 GroupPhoto Helper</string>
	<string name="deleteImageButtonLabel">Delete</string>
	<string name="shareImageButtonLabel">Share</string>
	<string name="exitViewImageButtonLabel">Return</string>
	
	<string name="gridDeleteButtonLabel">Delete</string>
	<string name="gridViewButtonLabel">View</string>
	
	<string name="helpButtonLabel">Help</string>
	<string name="libraryButtonLabel">Library</string>
	<string name="singleImageButtonLabel">1 Pic</string>
	<string name="multiImageButtonLabel">4 Pics</string>
	<string name="switchCameraButtonLabel">Switch Camera</string>
	<string name="cancelPictureButtonLabel">Cancel Picture</string>
	
	<string name="delayButtonLabelSecondsFormat">Delay: %d Sec</string>
	<string name="delayButtonLabelNone">Delay: None</string>
	<string name="defaultDelayButtonLabel">Delay: 5 Sec</string>
	
	<string name="flashButtonDefaultLabel">Flash</string>
	<string name="flashButtonOnLabel">Flash: On</string>
	<string name="flashButtonOffLabel">Flash: Off</string>
	<string name="flashButtonAutoLabel">Flash: Auto</string>
	
	<string name="canceledPictureMessage">Canceled picture</string>
	<string name="timerCountdownMessageFormat">%d</string>
	<string name="savedPictureMessage">Saved photo</string>
			
	<string name="noImagesFound">You have not taken any pictures yet.</string>
	
	<string name="about_text">
	    大合照好幫手\n\n按下快門，8秒後自動拍攝，從此大合照一個都不能少！\nTake a group photo with your friend! 8 seconds countdown before taking picture!\n\nDeveloped by BlackNovaMedia.com\n\nApp includes codes from\n\nBlockAlertsAnd-ActionSheets by gpambrozio\nDLCImagePickerController by gobackspaces\nGPUImage by BradLarson\nSoundEffect by www.SoundJay.com\nLincense and Source: https://github.com/blacknovamedia/CamTimer\n\n\n		
	</string>

	
	<style name="ButtonText">
	    <item name="android:layout_width">fill_parent</item>
	    <item name="android:layout_height">wrap_content</item>
	    <item name="android:textColor">#ffffff</item>
	    <item name="android:gravity">center</item>
	    <item name="android:layout_margin">3dp</item>
	    <item name="android:textSize">30dp</item>
	    <item name="android:textStyle">bold</item>
	    <item name="android:shadowColor">#000000</item>
	    <item name="android:shadowDx">1</item>
	    <item name="android:shadowDy">1</item>
	    <item name="android:shadowRadius">2</item>
	</style>
		
</resources>
