<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
   	android:layout_width="fill_parent"
   	android:layout_height="fill_parent"
   	android:background="@drawable/bg2">

	<SurfaceView android:id="@+id/cameraView" 
		android:layout_width="fill_parent"
		android:layout_height="fill_parent" />

	<LinearLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
		android:orientation="vertical">



		<LinearLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
			android:orientation="horizontal"
			android:layout_weight="1"
			android:gravity="center"
   			android:background="@drawable/menu_bg">
				
			<LinearLayout
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_weight="0.03"
			    android:gravity="center|fill_vertical|left"
			    android:orientation="vertical" 
			    >

				<com.blacknovamedia.cameratimer.util.ShutterButton
				    android:id="@+id/shutterButton"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:background="#00000000"
				    android:clickable="true"
				    android:layout_marginLeft="10dp"
				    android:src="@drawable/btn_camera_shutter_holo" />
		
				<Button android:id="@+id/cancelPictureButton" android:visibility="gone"
					android:layout_marginLeft="10dp"
				    android:layout_width="wrap_content" android:layout_height="wrap_content"/>
				
			
				<Button android:id="@+id/flashButton"  android:visibility="gone"
					android:layout_marginLeft="10dp"
				    android:layout_width="wrap_content" android:layout_height="wrap_content" />

				<Button
				    android:id="@+id/switchCameraButton"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:layout_gravity="center_vertical"
				    android:layout_marginLeft="10dp"
				    android:src="@drawable/btn_switchcam" />

				<Button android:id="@+id/helpButton"
					android:layout_marginLeft="10dp"
				    android:layout_width="wrap_content" android:layout_height="wrap_content" />				

		        <ImageView
            		android:id="@+id/bnmLogosquare"
		            android:layout_width="42dp"
		            android:layout_height="42dp"
		            android:layout_marginBottom="10dip"
		            android:layout_marginLeft="7dip"
		            android:layout_marginRight="10dip"
		            android:layout_marginTop="10dip"
		            android:adjustViewBounds="true"
		            android:src="@drawable/bnm_logo_square" />
				
			<TextView android:layout_width="fill_parent" android:layout_height="wrap_content" 
				android:id="@+id/statusText"
				android:gravity="top|center"
				android:textSize="60dp"
    			android:fontFamily="Arial"
            	android:textColor="@color/gray"
				/>			
					        
				<Button android:id="@+id/libraryButton" android:text="@string/libraryButtonLabel"
					android:layout_width="wrap_content" android:layout_height="wrap_content" android:visibility="gone" />				
												
				<Button android:id="@+id/pictureDelayButton" android:text="@string/defaultDelayButtonLabel"
					android:layout_width="wrap_content" android:layout_height="wrap_content" android:visibility="gone" />
					
			    <Button android:id="@+id/numberOfPicturesButton" android:text="@string/singleImageButtonLabel"
			    	android:layout_width="wrap_content" android:layout_height="wrap_content" android:visibility="gone" />
							
			</LinearLayout>

		</LinearLayout>
		

			
	</LinearLayout>
				                  	
</FrameLayout>